[package]
name = "rbase64"
version = "0.1.0"
authors = ["Jorge Sánchez <jorgesg1986@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.0"

[dependencies.gtk]
version = "0.8.1"
features = ["v3_22"]

[dependencies.gio]
version = "0.8.1"
features = ["v2_56"]

[dependencies.glib]
version = "0.9.3"
features = ["v2_56"]
